crates/next-custom-transforms/tests/errors/react-server-components/client-graph/metadata/input.js
export const metadata = {}

export default function () {
  return null
}
